--- a/projects/jtProject/frontend/templates/_layout.jade
+++ b/projects/jtProject/frontend/templates/_layout.jade
@@ -117,6 +117,11 @@ mixin authorsModal()
                         + authorArticles()
         div.t-authorModalPhoto
             img(src="images/photos/John.png")
+            div.t-modalImgOverlay
+                div.t-modalButtonsHolder
+                    div.t-modalShare
+                    div.t-modalBack
+                        span Назад
 
 mixin authorArticles()
     div.t-authorModalArticleCard
