--- a/projects/jtProject/frontend/sass/modules/main.sass
+++ b/projects/jtProject/frontend/sass/modules/main.sass
@@ -27,6 +27,7 @@ main
     position: relative
     color: $white
     overflow: hidden
+    cursor: pointer
     ul
       list-style: none
       margin: 0
