--- a/projects/jtProject/frontend/sass/modules/authorModal.sass
+++ b/projects/jtProject/frontend/sass/modules/authorModal.sass
@@ -1,15 +1,13 @@
 .t-authorModal
-  position: fixed
-  top: 0
-  left: 0
-  right: 0
-  bottom: 0
   display: none
   &.turnAnimation
     .t-authorModalInfo
       animation: animationLeft 1s ease-in-out
     .t-authorModalPhoto
       animation: animationRight 1s ease-in-out
+    .t-modalButtonsHolder
+      animation: modalButtons .4s ease-in-out
+      animation-delay: 1s
   &.closeAnim
     .t-authorModalInfo
       animation: animationLeftHide 1s ease-in-out
@@ -55,54 +53,3 @@
     width: 100%
     height: 100%
     background-color: rgba(0,0,0,.3)
-    .t-modalButtonsHolder
-      transition: .4s ease-in-out
-      position: absolute
-      top: 67px
-      right: 56px
-      .t-modalBack
-        cursor: pointer
-        span
-          @include fontsSizes(14, bold, 16)
-          color: $white
-
-@keyframes animationLeft
-  from
-    transform: translateX(-150%)
-  to
-    transform: none
-
-@keyframes animationRight
-  from
-    transform: translateX(150%)
-  to
-    transform: none
-
-@keyframes animationLeftHide
-  from
-    transform: none
-  to
-    transform: translateX(-150%)
-
-@keyframes animationRightHide
-  from
-    transform: none
-  to
-    transform: translateX(150%)
-
-
-@keyframes modalButtons
-  from
-    transform: translateX(100px)
-    opacity: 0
-  to
-    transform: none
-    opacity: 1
-
-@keyframes modalButtonsHide
-  from
-    transform: none
-    opacity: 1
-  to
-    transform: translateX(100px)
-    opacity: 0
