--- a/projects/jtProject/frontend/sass/styleModules/mixins.sass
+++ b/projects/jtProject/frontend/sass/styleModules/mixins.sass
@@ -18,3 +18,8 @@
   display: inline-block
   text-decoration: none
   transition: .2s ease-in-out
+
+@mixin forEaseAnim($opacity, $translate, $all)
+  opacity: $opacity
+  transform: $translate
+  pointer-events: $all
