--- a/projects/jtProject/frontend/templates/aside.jade
+++ b/projects/jtProject/frontend/templates/aside.jade
@@ -1,37 +1,42 @@
 aside
-    section.t-logoSection
-        a(href="/").t-logoWrapper
-            div.t-logo
-    div.t-menuWrapper
-        nav
-            ul.t-menuList
-                li.t-menuListItem
-                    a(href="#") Всё сразу
-                li.t-menuListItem
-                    a(href="#") Статьи
-                li.t-menuListItem
-                    a(href="#") Подборки
-                li.t-menuListItem
-                    a(href="#") Кейс недели
-                li.t-menuListItem
-                    a(href="#") Переводы
-                li.t-menuListItem
-                    a(href="#") Блоги компаний
-                li.t-menuListItem
-                    a(href="#") Экспертное мнение
-                li.t-menuListItem
-                    a(href="#") Туториалы
-                li.t-menuListItem
-                    a(href="#") Бэкстейдж
-                li.t-menuListItem
-                    a(href="#") Библиотека
-                li.t-menuListItem
-                    a(href="#") События
-                li.t-menuListItem
-                    a(href="/authors.html") Авторы
-                li.t-menuListItem
-                    a(href="#") Информация
-        div.t-copyWrapper
-            span &copy; ЖТ 2018
-            br
-            a(href="http://tdsgn.ru/") Создано в Студии Т
+    div.t-asideInsideHolder
+        section.t-logoSection
+            div.t-burger.t-mainBurger
+                span.line
+                span.line
+                span.line
+            a(href="/").t-logoWrapper
+                div.t-logo
+        div.t-menuWrapper
+            nav
+                ul.t-menuList
+                    li.t-menuListItem
+                        a(href="/") Всё сразу
+                    li.t-menuListItem
+                        a(href="#") Статьи
+                    li.t-menuListItem
+                        a(href="#") Подборки
+                    li.t-menuListItem
+                        a(href="#") Кейс недели
+                    li.t-menuListItem
+                        a(href="#") Переводы
+                    li.t-menuListItem
+                        a(href="#") Блоги компаний
+                    li.t-menuListItem
+                        a(href="#") Экспертное мнение
+                    li.t-menuListItem
+                        a(href="#") Туториалы
+                    li.t-menuListItem
+                        a(href="#") Бэкстейдж
+                    li.t-menuListItem
+                        a(href="#") Библиотека
+                    li.t-menuListItem
+                        a(href="#") События
+                    li.t-menuListItem
+                        a(href="/authors.html") Авторы
+                    li.t-menuListItem
+                        a(href="#") Информация
+            div.t-copyWrapper
+                span &copy; ЖТ 2018
+                br
+                a(href="http://tdsgn.ru/") Создано в Студии Т
