--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -14,20 +14,14 @@ body
   position: fixed
   &.modalActivate
     transition: all .3s ease-in-out
-    .t-logoSection
-      position: absolute
-      z-index: 1000
-      animation: animationLogoAndAuthor .5s ease-in-out
-    .t-namePage
-      position: absolute
-      z-index: 1000
-      transform: translateX(-120px)
-      animation: animationName .5s ease-in-out
+    .t-hiddenLogoWrapper
+      @include forEaseAnim(1, none, all)
     .t-newsModal
       .t-newsModalAuthorHolder
-        @include forEaseAnim(1, none, 'all')
+        @include forEaseAnim(1, none, all)
       .t-newsModalTitle
-        @include forEaseAnim(1, 'translateX(-30%)', 'all')
+        @include forEaseAnim(1, translateX(-30%), all)
+        transition: .5s ease-in-out
 
 
 
@@ -63,16 +57,58 @@ main
   border-radius: 16px
   transition: .3s ease-in-out
 
+.t-hiddenLogoWrapper
+  display: flex
+  align-items: center
+  position: absolute
+  padding: 34px 0 0 16px
+  z-index: 1000
+  transition: .4s ease-in-out
+  @include forEaseAnim(0, translateX(-150%), none)
+  .t-burger
+    margin-right: 5px
+  .t-logoWrapper
+    margin-right: 34px
+  .t-pageNameHolder
+    @include fontsSizes(14, bold, 17)
+    color: $tBlackSec
+  &.activateBg
+    width: 50%
+    background-color: $white
+    &:after
+      content: ''
+      position: absolute
+      display: block
+      background-image: linear-gradient(to bottom, $white, rgba(255, 255, 255, 0))
+      height: 34px
+      left: 0
+      right: 0
+      bottom: -34px
 
+.t-burger
+  display: inline-block
+  width: 14px
+  height: 14px
+  cursor: pointer
+  .line
+    display: block
+    width: 100%
+    height: 2px
+    background-color: $tBlack
+    margin-bottom: 4px
+    border-radius: 1px
+    &:last-child
+      width: 10px
+      margin-bottom: 0
 
-// Media Hovers
-
-@media (min-width: 769px)
-  .t-btn:hover
-    background-color: $dblue
-    border-color: transparent
-    color: $white
-
+.t-overlay
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  background-color: rgba(0, 0, 0, 0.3)
+  z-index: 1003
 
 .t-relative
   position: relative
@@ -230,11 +266,8 @@ main
     opacity: 1
     transform: none
 
-@keyframes animationName
+@keyframes hiddenMenuAnimation
   from
-    opacity: 0
-    transform: translateY(-55px)
-    transform: translateX(-120px)
-  top
-    opacity: 1
-    transform: none
+    @include forEaseAnim(1, translateX(-150%), none)
+  to
+    @include forEaseAnim(1, none, all)
