--- a/projects/jtProject/frontend/sass/modules/newsModal.sass
+++ b/projects/jtProject/frontend/sass/modules/newsModal.sass
@@ -32,7 +32,7 @@
       display: flex
       flex-direction: column
       transform: translateY(-55px)
-      @include forEaseAnim(0, 'translateY(-55px)', 'none')
+      @include forEaseAnim(0, translateY(-55px), 'none')
       transition: .5s ease-in-out
       .t-flexHolder
         width: 256px
@@ -88,8 +88,8 @@
     height: auto
     margin-top: 40px
     margin-bottom: 80px
-    transition: .5s ease-in-out
-    @include forEaseAnim(0, 'translateX(-700px)', 'none')
+    transition: .3s ease-in-out
+    @include forEaseAnim(0, translateX(-100%), 'none')
     &:after
       content: ''
       display: block
