--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -101,6 +101,72 @@ main
       width: 10px
       margin-bottom: 0
 
+
+.t-dotsHolder
+  display: flex
+  align-items: center
+  justify-content: center
+  width: 24px
+  height: 24px
+  background-color: transparent
+  cursor: pointer
+  span
+    display: block
+    position: relative
+    width: 2px
+    height: 2px
+    background-color: rgba(51, 51, 51, 0.30)
+    border-radius: 50%
+    &:before, &:after
+      content: ''
+      display: block
+      position: absolute
+      border-radius: 50%
+      background-color: rgba(51, 51, 51, 0.30)
+      width: 2px
+      height: 2px
+    &:before
+      right: 4px
+    &:after
+      left: 4px
+
+
+.t-smallModalMenu
+  position: absolute
+  display: flex
+  flex-direction: column
+  width: 152px
+  min-height: 125px
+  padding: 16px
+  background-color: $white
+  margin: 0
+  list-style: none
+  box-shadow: 0 4px 48px rgba(33, 81, 231, 0.14)
+  right: -130px
+  top: -20px
+  z-index: 1000
+  opacity: 0
+  pointer-events: none
+  transition: .4s ease
+  li
+    cursor: pointer
+    margin: 0!important
+    @include fontsSizes(14, normal, 17)
+    transition: .3s ease
+    &:not(:last-child)
+      margin-bottom: 8px!important
+
+.t-callHiddenSortingMenu
+  &:hover
+    .t-sortModalContainer
+      opacity: 1!important
+      pointer-events: all!important
+
+
+.t-hiddenLink
+  display: none!important
+  margin: 0!important
+
 .t-overlay
   position: fixed
   top: 0
