--- a/projects/jtProject/frontend/sass/styleModules/media.sass
+++ b/projects/jtProject/frontend/sass/styleModules/media.sass
@@ -5,9 +5,99 @@
     background-color: $dblue
     border-color: transparent
     color: $white
+  .t-smallModalMenu
+    li:hover
+      color: $dblue
 
 @media (max-width: 1440px)
   aside .t-menuWrapper
     margin-top: 47px
   .t-mainTopContent
     margin-bottom: 15px
+  .t-newsModal .t-newsColorBlock
+    flex: 1 1 33.311%
+    width: 33.311%
+  .t-newsModal .t-newsModalInfo .t-newsInsideHolder
+    flex: 1 1 66.689%
+    width: 66.689%
+  .t-newsModal .t-articleText
+    width: 100%
+
+@media (max-width: 1250px)
+  .t-newsModal .t-newsColorBlock
+    flex: 1 1 29.775%
+    width: 29.775%
+  .t-newsModal .t-newsModalInfo .t-newsInsideHolder
+    flex: 1 1 70.225%
+    width: 70.225%
+    padding: 57px 32px 132px 32px
+
+  .t-newsModal .t-newsModalTitle
+    width: 768px
+  .t-newsModal .t-newsModalImage
+    width: 768px
+    img
+      height: auto
+
+@media (max-width: 1024px)
+  .t-newsModal .t-newsModalTitle
+    width: 600px
+    margin: 40px 0
+    @include fontsSizes(50, bold, 61)
+  .t-newsModal .t-newsModalImage
+    width: 600px
+
+@media (max-width: 980px)
+  .t-hiddenLogoWrapper .t-pageNameHolder
+    display: none
+
+
+@media (max-width: 768px)
+  .t-newsModal .t-newsColorBlock
+    flex: 1 1 1%
+    width: 1%
+  .t-newsModal .t-newsModalInfo .t-newsInsideHolder
+    flex: 1 1 99%
+    width: 99%
+    padding: 88px 24px 24px 24px
+    display: flex
+    flex-direction: column
+  .t-newsModal .t-newsModalImage
+    transform: scale(1.2, 1) translateX(-3px)
+    width: 100%
+    .t-signature
+      margin-top: 16px
+  body.modalActivate .t-newsModal .t-newsModalTitle
+    transform: none
+  .t-newsModal .t-newsModalInfo .t-newsInsideHolder
+    .t-newsModalTitle
+      order: 1
+    .t-newsModalMainInfo
+      order: 2
+    .t-newsModalImage
+      order: 3
+    .t-newsModalAuthorHolder
+      order: 4
+      margin-top: 40px
+    .t-likeBlockWrapper
+      order: 5
+      margin: 40px 0
+    .t-commentBlock
+      order: 6
+
+
+@media (max-width: 700px)
+  .t-newsModal .t-newsModalTitle
+    width: 100%
+
+@media (max-width: 500px)
+  .t-newsModal .t-newsModalTitle
+    @include fontsSizes(30, bold, 37)
+    &:after
+      margin-top: 24px
+      height: 2px
+  .t-newsModal .t-likeBlockWrapper .t-likesContainer
+    flex-direction: column
+    button
+      width: 100%
+      margin: 0 0 24px 0
