--- a/projects/jtProject/frontend/sass/modules/topMainContent.sass
+++ b/projects/jtProject/frontend/sass/modules/topMainContent.sass
@@ -17,10 +17,13 @@
       margin: 0 8px 0 0
     .t-nameAndSortWrapper
       display: flex
+      align-items: center
       margin-right: 40px
       .t-namePage
         margin-right: 40px
       .t-topSortWrapper
+        display: flex
+        align-items: center
         .t-topSortName
           margin-right: 8px
   .t-topListCtrlWrapper
