--- a/projects/jtProject/frontend/sass/styleModules/media.sass
+++ b/projects/jtProject/frontend/sass/styleModules/media.sass
@@ -46,6 +46,12 @@
     @include fontsSizes(50, bold, 61)
   .t-newsModal .t-newsModalImage
     width: 600px
+  .t-authorModal .t-authorModalInfo
+    padding: 132px 30px
+    .t-authorModalName
+      font-size: 45px
+    .t-authorModalProfession
+      font-size: 30px
 
 @media (max-width: 980px)
   .t-hiddenLogoWrapper .t-pageNameHolder
@@ -53,6 +59,11 @@
 
 
 @media (max-width: 768px)
+  .t-logoWrapper .t-logo
+    width: 87px
+    height: 48px
+    background-position: center
+    background-size: contain
   .t-newsModal .t-newsColorBlock
     flex: 1 1 1%
     width: 1%
@@ -84,6 +95,33 @@
       margin: 40px 0
     .t-commentBlock
       order: 6
+
+  .t-authorModal
+    .t-authorModalInfoHolder
+      flex-direction: column
+    .t-simpleBlock
+      display: block
+      order: 1
+      position: absolute
+      left: 0
+      right: 0
+      top: -88px
+      padding: 17px 0 23px 30px
+    .t-authorModalInfo
+      overflow: visible
+      order: 3
+      flex: 0 0 100%
+      height: 100%
+    .t-authorModalPhoto
+      margin-top: 88px
+      order: 2
+      flex: 0 0 100%
+    .t-hiddenLogoWrapper.activateBg
+      background-color: transparent
+      width: auto
+      padding: 0
+      &:after
+        display: none
 
 
 @media (max-width: 700px)
