--- a/projects/jtProject/frontend/sass/modules/topMainContent.sass
+++ b/projects/jtProject/frontend/sass/modules/topMainContent.sass
@@ -5,6 +5,7 @@
   @include fontsSizes(14, bold, 17)
   .t-mainTopContentInside
     display: flex
+    white-space: nowrap
     align-items: center
     justify-content: space-between
     height: 80px
@@ -14,8 +15,10 @@
       width: auto
       list-style: none
       padding: 0
-      margin: 0 8px 0 0
+      margin: 0
     .t-nameAndSortWrapper
+      float: left
+      width: 180px
       display: flex
       align-items: center
       margin-right: 40px
@@ -34,33 +37,48 @@
 .t-leftAndMidContentContainer
   display: flex
   align-items: center
+  width: calc(100% - 100px)
+  display: block
 
 .t-topMiddleSection
-  //width: calc(100% - 297.56px)!important
-  li:not(:first-child)
-    margin-left: 24px
+  width: calc(100% - 265px)!important
+  height: 24px
+  li
+    &:not(:first-child)
+      margin-left: 24px
+    &.invisible
+      opacity: 0
+      pointer-events: none
 
 .t-topRightSection
   li:not(:last-child)
     margin-right: 16px
 
 .t-topSortLinks
-  position: relative
   @include links()
   @include fontsSizes(14, bold, 17)
   color: $dgrey
-  &:before
+  &:after
     content: ''
-    position: absolute
+    display: block
+    margin-top: 2px
     bottom: -2px
     left: 0
     width: 50%
     height: 1px
     background-color: $dgrey
     transition: .3s ease
-  &:hover:before
+  &:hover:after
     width: 100%
   &.active
     color: $tBlack
-    &:before
+    &:after
       display: none
+
+
+.t-sortMenuHolder
+  max-width: 440.88px
+  margin-right: 8px
+  display: inline-block
+  vertical-align: middle
+  overflow: hidden!important
