--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -37,8 +37,10 @@ body
   background-color: #fff
   height: 88px
   flex: 0 0 88px
-  padding: 17px 0 23px 30px
+  padding: 17px 23px 23px 30px
   width: 100%
+  align-items: center
+  justify-content: space-between
 
 .t-mainWrapper
   height: 100vh
@@ -118,16 +120,21 @@ main
 
 
 .t-dotsHolder
-  display: flex
-  align-items: center
-  justify-content: center
+  display: inline-block
+  vertical-align: middle
+  position: relative
   width: 24px
   height: 24px
   background-color: transparent
   cursor: pointer
   span
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
     display: block
-    position: relative
+    margin: auto
     width: 2px
     height: 2px
     background-color: rgba(51, 51, 51, 0.30)
@@ -273,6 +280,10 @@ main
       .t-authorArticleCardTitle
         margin-bottom: 4px
         @include fontsSizes(16, bold, 20)
+        max-width: 95%
+        text-overflow: ellipsis
+        overflow: hidden
+        white-space: nowrap
       .t-authorArticleCardCtegory
         margin-bottom: 2px
         @include fontsSizes(16, bold, 20)
